Implement billionaire service choreo-ref: f489f985-eabb-4eee-a045-b084c37287ce

--- a/Cloud.toml
+++ b/Cloud.toml
@@ -1,3 +1,6 @@
 [settings]
   buildImage = false
 
+[[container.copy.files]]
+sourceFile="./TopRichestInWorld.csv"
+target="/home/ballerina/TopRichestInWorld.csv"
